Bug 78333 - FILESAVE: Corrupt: File corruption : AlternateContent enclosed within SDT content in Header.xml
Summary: FILESAVE: Corrupt: File corruption : AlternateContent enclosed within SDT con...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha1
Hardware: Other All
: high major
Assignee: Rajashri
URL:
Whiteboard: BSA target:4.3.0
Keywords:
Depends on:
Blocks: DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2014-05-06 11:09 UTC by Rajashri
Modified: 2026-01-28 15:39 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
The file contains a group shape and a title SDT content inside the header. (44.38 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-06 11:09 UTC, Rajashri
Details
RoundTrip file (23.74 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-06 11:11 UTC, Rajashri
Details
Roundtripped file using LibreOffice version including fix; still corrupt in Word 2013 (17.79 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-05-25 21:07 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-05-06 11:09:09 UTC
Created attachment 98549 [details]
The file contains a group shape and a title SDT content inside the header.

Problem description: 
After doing the initial phase of analysis, we can say that the corruption might get introduced due to changes in header.xml

Steps to reproduce:
1. Open file in LibreOffice
2. Click File -> Save As (Microsoft word 2007/2010(.docx))
3. It saves as .docx
4. Open the same file again which got roundtripped.

Current behaviour:
The file should open properly after roundtrip.
Expected behaviour:
It gives a message "The file cannot be opened because there are problems with the contents".              
Operating System: All
Version: 4.3.0.0.alpha1
Comment 1 Rajashri 2014-05-06 11:11:21 UTC
Created attachment 98550 [details]
RoundTrip file
Comment 2 Commit Notification 2014-05-22 07:33:17 UTC
Umesh Kadam committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=80fd9fb7209cfd5c0622ee99d59e42e6db32f021

fdo#78333 : SdtContent and a Shape overlapping causes corruption



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Jorendc 2014-05-25 21:06:39 UTC
Still corrupted after roundtripping. Tested using Windows 8.1 with LibreOffice Version: 4.4.0.0.alpha0+
Build ID: 16ba360f2a526654cedfcd4cda230442c3a8a522
TinderBox: Win-x86@39, Branch:master, Time: 2014-05-25_07:43:52

Kind regards,
Joren
Comment 4 Jorendc 2014-05-25 21:07:09 UTC
Created attachment 99805 [details]
Roundtripped file using LibreOffice version including fix; still corrupt in Word 2013
Comment 5 Jorendc 2014-06-15 13:01:13 UTC
No repro anymore (Version: 4.4.0.0.alpha0+
Build ID: 4af1b789545bc3815f79fafed5b1806b3c08b69d
TinderBox: Win-x86@51-TDF, Branch:MASTER, Time: 2014-06-14_14:53:36)