fdo#78333 : SdtContent and a Shape overlapping causes corruption

- Normally if there is a case where text/shape is overlapped with (another)
   shape then LO used to write the text and the AlternateContent in the same run.
- This is supported in MSO and there is no visual difference.
- But in case if the SdtContent(with text) is overlapped with the Shape then LO
   processes sdtContent as a text and ends up putting the alternateContent and the
   text in a single run. Ultimately it includes the entire run in a SdtContent,
   which is incorrect.
- The fix checks for the aforementioned scenario and puts them in a different run
   and also restricts the sdtContent being written in an invalid AlternateContent.

Change-Id: I36f4cdb1b583523dd8f717ae094bdf09c7a61f62